--- a/atendimentos.html
+++ b/atendimentos.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central de Atendimento - CRM</title>
+    <script>
+        window.onerror = function(msg, url, line, col, error) {
+            document.body.innerHTML = '<div style="padding:20px;color:red;"><h1>Erro JavaScript</h1><p>' + msg + '</p><p>Linha: ' + line + '</p></div>';
+            return false;
+        };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
