--- a/anny.html
+++ b/anny.html
@@ -6,7 +6,8 @@
     <title>Anny - Assistente de BI | CRM CJOTA</title>
     <script>
         window.onerror = function(msg, url, line, col, error) {
-            document.body.innerHTML = '<div style="padding:20px;color:red;"><h1>Erro JavaScript</h1><p>' + msg + '</p><p>Linha: ' + line + '</p></div>';
+            console.error('Erro JS:', msg, 'Linha:', line);
+            alert('Erro JavaScript: ' + msg);
             return false;
         };
     </script>
