feat: Botao Trocar WhatsApp - desconecta para conectar outro numero

--- a/atendimentos.html
+++ b/atendimentos.html
@@ -148,6 +148,10 @@
                 <span class="status-dot status-disconnected"></span>
                 <span class="text-sm text-slate-600">Desconectado</span>
             </div>
+            <button onclick="disconnectWhatsapp()" class="btn btn-secondary text-sm py-2 text-red-600 hover:bg-red-50" title="Desconectar WhatsApp atual">
+                <i data-lucide="log-out" class="w-4 h-4"></i>
+                Trocar
+            </button>
             <button onclick="connectWhatsapp()" class="btn btn-primary text-sm py-2">
                 <i data-lucide="plug" class="w-4 h-4"></i>
                 Conectar
