--- a/atendimentos.html
+++ b/atendimentos.html
@@ -190,7 +190,8 @@
             <!-- Header do Chat -->
             <div id="chatHeader" class="h-16 bg-white border-b border-slate-100 flex items-center px-5 justify-between hidden">
                 <div class="flex items-center gap-3">
-                    <div class="w-10 h-10 rounded-full bg-slate-200 flex items-center justify-center text-slate-600 font-semibold text-sm">
+                    <div class="w-10 h-10 rounded-full bg-slate-200 flex items-center justify-center text-slate-600 font-semibold text-sm relative overflow-hidden">
+                        <img id="headerAvatar" src="" alt="Avatar" class="w-10 h-10 rounded-full object-cover hidden">
                         <span id="headerInitials">?</span>
                     </div>
                     <div>
