--- a/anny.html
+++ b/anny.html
@@ -130,7 +130,7 @@
                     <i data-lucide="users" class="w-5 h-5"></i>
                     <span>Clientes</span>
                 </a>
-                <a href="index.html#campaigns" class="nav-item">
+                <a href="campanhas.html" class="nav-item">
                     <i data-lucide="megaphone" class="w-5 h-5"></i>
                     <span>Campanhas</span>
                 </a>
