--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
                     <i data-lucide="users" class="w-5 h-5"></i>
                     <span>Clientes</span>
                 </a>
-                <a href="#" id="nav-campaigns" class="nav-item">
+                <a href="campanhas.html" class="nav-item bg-purple-50 text-purple-700 hover:bg-purple-100">
                     <i data-lucide="megaphone" class="w-5 h-5"></i>
-                    <span>Campanhas</span>
+                    <span class="font-semibold">Campanhas</span>
                 </a>
                 <a href="#" id="nav-coupons" class="nav-item">
                     <i data-lucide="ticket" class="w-5 h-5"></i>
