--- a/atendimentos.html
+++ b/atendimentos.html
@@ -252,14 +252,19 @@
         <section class="flex-1 flex flex-col chat-bg relative">
             <!-- Header do Chat -->
             <div id="chatHeader" class="h-16 bg-white border-b border-slate-100 flex items-center px-5 justify-between hidden">
-                <div class="flex items-center gap-3">
+                <div class="flex items-center gap-3 flex-1 cursor-pointer hover:bg-slate-50 -mx-2 px-2 py-2 rounded-lg transition" onclick="openClientSidebar()" title="Clique para ver/editar dados do contato">
                     <div class="w-10 h-10 rounded-full bg-slate-200 flex items-center justify-center text-slate-600 font-semibold text-sm relative overflow-hidden">
                         <img id="headerAvatar" src="" alt="Avatar" class="w-10 h-10 rounded-full object-cover hidden">
                         <span id="headerInitials">?</span>
                     </div>
-                    <div>
-                        <h2 id="headerName" class="font-semibold text-slate-800">Nome</h2>
-                        <p id="headerNumber" class="text-xs text-slate-500">+55 00 0000-0000</p>
+                    <div class="flex-1 min-w-0">
+                        <h2 id="headerName" class="font-semibold text-slate-800 truncate">Nome</h2>
+                        <div class="flex items-center gap-2">
+                            <p id="headerNumber" class="text-xs text-slate-500 truncate">+55 00 0000-0000</p>
+                            <a id="headerWhatsAppLink" href="#" target="_blank" class="text-emerald-600 hover:text-emerald-700 transition hidden" title="Abrir no WhatsApp" onclick="event.stopPropagation()">
+                                <i data-lucide="message-circle" class="w-3.5 h-3.5"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 
