--- a/atendimentos.html
+++ b/atendimentos.html
@@ -429,6 +429,52 @@
             </div>
         </section>
 
+        <!-- Coluna 3: Painel de Contato (tipo WhatsApp Web) -->
+        <aside id="contactPanel" class="w-80 bg-white border-l border-slate-100 flex flex-col overflow-y-auto chat-scroll hidden">
+            <!-- Header com foto, nome e status -->
+            <div class="p-6 border-b border-slate-100 text-center">
+                <div class="relative w-20 h-20 rounded-full mx-auto mb-4 overflow-hidden bg-slate-200 flex items-center justify-center">
+                    <img id="contactPanelPhoto" src="" alt="Foto" class="w-20 h-20 object-cover hidden">
+                    <span id="contactPanelInitials" class="text-2xl font-bold text-slate-600">?</span>
+                </div>
+                <h2 id="contactPanelName" class="font-bold text-xl text-slate-800">Nome</h2>
+                <div class="flex items-center gap-2 justify-center mt-2">
+                    <span id="contactPanelStatus" class="w-3 h-3 rounded-full bg-gray-400"></span>
+                    <p id="contactPanelStatusText" class="text-sm text-slate-500">Offline</p>
+                </div>
+            </div>
+
+            <!-- Informações -->
+            <div class="p-4 space-y-4 flex-1">
+                <!-- Número de Telefone -->
+                <div class="border border-slate-200 rounded-xl p-4">
+                    <p class="text-xs font-medium text-slate-500 mb-2">NÚMERO DE TELEFONE</p>
+                    <div class="flex items-center gap-2">
+                        <i data-lucide="phone" class="w-5 h-5 text-emerald-600"></i>
+                        <div class="flex-1">
+                            <p id="contactPanelPhone" class="text-sm font-medium text-slate-800">+55 (00) 00000-0000</p>
+                            <p class="text-xs text-slate-400 mt-0.5">WhatsApp</p>
+                        </div>
+                        <a id="contactPanelPhoneLink" href="#" target="_blank" class="p-2 text-emerald-600 hover:bg-emerald-50 rounded-lg transition">
+                            <i data-lucide="external-link" class="w-4 h-4"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Ações Rápidas -->
+                <div class="space-y-2">
+                    <button onclick="copyPhone()" class="w-full flex items-center gap-3 p-3 rounded-lg hover:bg-slate-100 transition text-left">
+                        <i data-lucide="copy" class="w-5 h-5 text-slate-500"></i>
+                        <span class="text-sm font-medium text-slate-700">Copiar Número</span>
+                    </button>
+                    <button onclick="openClientSidebar()" class="w-full flex items-center gap-3 p-3 rounded-lg hover:bg-slate-100 transition text-left">
+                        <i data-lucide="database" class="w-5 h-5 text-blue-500"></i>
+                        <span class="text-sm font-medium text-slate-700">Ver Dados do CRM</span>
+                    </button>
+                </div>
+            </div>
+        </aside>
+
         <!-- Coluna 3: Dados do Cliente CRM - REFORMULADA -->
         <aside class="w-96 bg-white border-l border-slate-100 flex flex-col overflow-y-auto chat-scroll">
             <div class="p-4 border-b border-slate-100 flex items-center justify-between">
