refactor: Reestruturação profissional completa do sistema
ARQUITETURA NOVA:
- lib-data-layer.js: Sistema de normalização e auto-match com Supabase
  * normalizePhone() - Função global de limpeza de telefones
  * DataLayer class - Cache de clientes, auto-match por telefone
  * Enriquecimento de chats com dados do cliente

- lib-chat-loader.js: Sistema de carregamento de chats profissional
  * Carregamento paralelo de contatos + grupos
  * Filtro por tipo (todos, contatos, grupos)
  * Skeleton loading e estados vazios
  * Renderização com formatação profissional

- lib-anne-panel.js: Painel de inteligência (Raio-X do cliente)
  * Carregamento automático ao selecionar chat
  * Métricas: total gasto, ticket médio, última compra
  * Recomendação inteligente
  * Histórico de últimos produtos

ENDPOINTS NOVOS:
- POST /api/client-lookup: Buscar cliente por telefone
- POST /api/client-profile: Perfil completo para Anne panel

MELHORIAS:
- Design profissional com Inter font
- Skeleton loading em vez de telas em branco
- Auto-match automático de clientes
- Grupos aparecem com identificação visual
- Sincronização em tempo real de dados

--- a/atendimentos.html
+++ b/atendimentos.html
@@ -902,6 +902,9 @@
         </div>
     </div>
 
+    <script src="lib-data-layer.js"></script>
+    <script src="lib-chat-loader.js"></script>
+    <script src="lib-anne-panel.js"></script>
     <script src="atendimentos.js"></script>
     <script>lucide.createIcons();</script>
 </body>
