--- a/anny.html
+++ b/anny.html
@@ -306,7 +306,7 @@
 
             // API Configuration
             API_URL: window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
-                ? 'http://localhost:3000/api/anny'
+                ? '/api/anny'
                 : '/.netlify/functions/anny-ai',
 
             init() {
