--- a/campanhas.html
+++ b/campanhas.html
@@ -319,7 +319,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3000/api';
+        const API_BASE = '/api';
         let allCampaigns = JSON.parse(localStorage.getItem('crm_campaigns') || '[]');
         let allClients = [];
         let allGroups = [];
