--- a/atendimentos.html
+++ b/atendimentos.html
@@ -643,32 +643,51 @@
         </section>
     </main>
 
-    <!-- Modal de Produtos -->
+    <!-- Modal de Produtos (Catálogo) -->
     <div id="productModal" class="fixed inset-0 hidden z-50 flex items-center justify-center">
         <div class="fixed inset-0 modal-overlay" onclick="closeProductModal()"></div>
-        <div class="relative bg-white w-[600px] max-h-[80vh] rounded-2xl shadow-xl flex flex-col">
+        <div class="relative bg-white w-[680px] max-h-[85vh] rounded-2xl shadow-xl flex flex-col">
+            <!-- Header -->
             <div class="p-5 border-b border-slate-100 flex justify-between items-center">
                 <div class="flex items-center gap-3">
-                    <div class="w-9 h-9 rounded-xl bg-blue-100 flex items-center justify-center">
-                        <i data-lucide="package" class="w-5 h-5 text-blue-600"></i>
+                    <div class="w-9 h-9 rounded-xl bg-gradient-to-br from-emerald-400 to-emerald-600 flex items-center justify-center">
+                        <i data-lucide="shopping-bag" class="w-5 h-5 text-white"></i>
                     </div>
-                    <h3 class="font-semibold text-slate-800">Selecionar Produtos</h3>
+                    <div>
+                        <h3 class="font-semibold text-slate-800">Catálogo de Produtos</h3>
+                        <p class="text-xs text-slate-400" id="productCountLabel">0 produtos</p>
+                    </div>
                 </div>
                 <button onclick="closeProductModal()" class="text-slate-400 hover:text-slate-600 p-1 rounded-lg hover:bg-slate-100">
                     <i data-lucide="x" class="w-5 h-5"></i>
                 </button>
             </div>
-            <div class="p-4 bg-slate-50 border-b border-slate-100">
+            <!-- Busca + Filtros -->
+            <div class="p-4 bg-slate-50 border-b border-slate-100 space-y-3">
                 <div class="relative">
                     <i data-lucide="search" class="w-4 h-4 absolute left-3 top-1/2 -translate-y-1/2 text-slate-400"></i>
-                    <input type="text" id="productSearch" onkeyup="searchProducts(this.value)" placeholder="Buscar por nome ou SKU..." class="input pl-10 text-sm">
+                    <input type="text" id="productSearch" oninput="searchProducts(this.value)" placeholder="Buscar por nome, referência ou SKU..." class="input pl-10 pr-24 text-sm" autocomplete="off">
+                    <span id="productSearchCount" class="absolute right-3 top-1/2 -translate-y-1/2 text-xs text-slate-400"></span>
+                </div>
+                <div class="flex gap-2">
+                    <button onclick="filterProductStock('all')" id="stockFilterAll" class="px-3 py-1.5 rounded-full text-xs font-medium bg-emerald-100 text-emerald-700 border border-emerald-200 transition hover:bg-emerald-200">Todos</button>
+                    <button onclick="filterProductStock('inStock')" id="stockFilterInStock" class="px-3 py-1.5 rounded-full text-xs font-medium bg-white text-slate-500 border border-slate-200 transition hover:bg-slate-100">Em Estoque</button>
+                    <button onclick="filterProductStock('outOfStock')" id="stockFilterOutOfStock" class="px-3 py-1.5 rounded-full text-xs font-medium bg-white text-slate-500 border border-slate-200 transition hover:bg-slate-100">Sem Estoque</button>
+                    <div class="flex-1"></div>
+                    <button onclick="toggleProductView()" id="productViewToggle" class="px-3 py-1.5 rounded-lg text-xs font-medium bg-white text-slate-500 border border-slate-200 transition hover:bg-slate-100 flex items-center gap-1">
+                        <i data-lucide="layout-grid" class="w-3.5 h-3.5"></i>
+                        Grade
+                    </button>
                 </div>
             </div>
+            <!-- Lista de produtos -->
             <div id="productsListModal" class="flex-1 overflow-y-auto p-4 space-y-2">
                 <div class="text-center py-8 text-slate-500 text-sm">Carregando produtos...</div>
             </div>
-            <div class="p-4 border-t border-slate-100 bg-slate-50 rounded-b-2xl flex justify-end">
-                <button onclick="closeProductModal()" class="btn btn-secondary">Cancelar</button>
+            <!-- Footer -->
+            <div class="p-4 border-t border-slate-100 bg-slate-50 rounded-b-2xl flex items-center justify-between">
+                <p class="text-xs text-slate-400">Clique em "Enviar Link" para mandar ao cliente</p>
+                <button onclick="closeProductModal()" class="btn btn-secondary text-sm">Fechar</button>
             </div>
         </div>
     </div>
