--- a/anny.html
+++ b/anny.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anny - Assistente de BI | CRM CJOTA</title>
+    <link rel="icon" type="image/png" href="/V.png">
     <script>
         window.onerror = function(msg, url, line, col, error) {
             console.error('Erro JS:', msg, 'Linha:', line);
