--- a/atendimentos.html
+++ b/atendimentos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central de Atendimento - CRM</title>
+    <link rel="icon" type="image/png" href="/V.png">
     <script>
         window.onerror = function(msg, url, line, col, error) {
             document.body.innerHTML = '<div style="padding:20px;color:red;"><h1>Erro JavaScript</h1><p>' + msg + '</p><p>Linha: ' + line + '</p></div>';
