--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM - Sistema de Gestão</title>
+    <link rel="icon" type="image/png" href="/V.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
