--- a/anny.html
+++ b/anny.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anny - Assistente de BI | CRM CJOTA</title>
     <link rel="icon" type="image/png" href="/V.png">
+    <script>fetch('/api/auth/check').then(r=>r.json()).then(d=>{if(!d.authenticated)window.location.href='/login.html'}).catch(()=>{});</script>
     <script>
         window.onerror = function(msg, url, line, col, error) {
             console.error('Erro JS:', msg, 'Linha:', line);
