feat: update logo to VEXX CRM (logo.png), update favicon and login branding

--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - CRM CJ Rasteirinhas</title>
-    <link rel="icon" type="image/png" href="/V.png">
+    <title>Login - VEXX CRM</title>
+    <link rel="icon" type="image/png" href="/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -269,14 +269,10 @@
     <div class="login-container">
         <div class="login-card">
             <div class="logo-area">
-                <div class="logo-icon">
-                    <!-- WhatsApp-style icon -->
-                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347z"/>
-                        <path d="M12 0C5.373 0 0 5.373 0 12c0 2.625.846 5.059 2.284 7.034L.789 23.492a.5.5 0 00.613.613l4.458-1.495A11.952 11.952 0 0012 24c6.627 0 12-5.373 12-12S18.627 0 12 0zm0 22c-2.386 0-4.594-.82-6.336-2.197l-.442-.37-3.238 1.085 1.085-3.238-.37-.442A9.956 9.956 0 012 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10z"/>
-                    </svg>
+                <div class="logo-icon" style="background:transparent;box-shadow:none;">
+                    <img src="/logo.png" alt="VEXX CRM" style="width:72px;height:72px;border-radius:18px;object-fit:contain;">
                 </div>
-                <h1>CRM WhatsApp</h1>
+                <h1>VEXX CRM</h1>
                 <p>Acesse o painel de gestão</p>
             </div>
 
@@ -311,7 +307,7 @@
                 </button>
             </form>
         </div>
-        <p class="footer-text">CJ Rasteirinhas &copy; 2025 — Painel CRM</p>
+        <p class="footer-text">VEXX CRM &copy; 2025 — Painel de Gestão</p>
     </div>
 
     <script>
