--- a/atendimentos.html
+++ b/atendimentos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Central de Atendimento - CRM</title>
-    <link rel="icon" type="image/png" href="/V.png">
+    <link rel="icon" type="image/png" href="/logo.png">
     <script>fetch('/api/auth/check').then(r=>r.json()).then(d=>{if(!d.authenticated)window.location.href='/login.html'}).catch(()=>{});</script>
     <script>
         window.onerror = function(msg, url, line, col, error) {
