feat: migrate ALL localStorage to Supabase (full cloud persistence)
- Created 11 new Supabase tables (crm_tags, crm_chat_tags, crm_quick_replies,
  crm_client_notes, crm_snoozed, crm_scheduled, crm_ai_tags,
  crm_webhook_events, crm_abandoned_carts, crm_coupon_assignments, settings)
- Expanded syncAll/loadAll endpoints to handle all 18 localStorage keys
- Created lib-auto-sync.js: auto-loads from Supabase on page open,
  auto-saves every 5min, saves on beforeunload
- Added scheduleCloudSave() debounced trigger after every localStorage write
- script.js Storage.save() now triggers cloud sync automatically
- atendimentos.js: all 20 setItem calls trigger cloud sync
- Cloud-loaded event refreshes in-memory variables in atendimento
- supabase-migration.sql: DDL for all new tables with RLS policies

--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@ Aproveite e volte a comprar conosco!</textarea></div><div><label class="block te
         </a>
     </div>
     
+    <script src="lib-auto-sync.js"></script>
     <script src="script.js"></script>
     <script>
         lucide.createIcons();
