--- a/atendimentos.html
+++ b/atendimentos.html
@@ -1160,6 +1160,7 @@ Ex:
         </div>
     </div>
 
+    <script src="lib-auto-sync.js"></script>
     <script src="lib-data-layer.js"></script>
     <script src="lib-chat-loader.js"></script>
     <script src="lib-anne-panel.js"></script>
