--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - VEXX CRM</title>
-    <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="icon" type="image/png" href="/V.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -308,6 +308,10 @@
     </div>
 
     <script>
+        // Pegar redirect da URL
+        const _params = new URLSearchParams(window.location.search);
+        const _redirect = _params.get('redirect') || '/index.html';
+
         // Check if already authenticated
         (async function checkAuth() {
             try {
@@ -315,7 +319,7 @@
                 if (res.ok) {
                     const data = await res.json();
                     if (data.authenticated) {
-                        window.location.href = '/index.html';
+                        window.location.href = _redirect;
                     }
                 }
             } catch (e) { /* ignore */ }
@@ -343,8 +347,8 @@
                 const data = await res.json();
 
                 if (res.ok && data.success) {
-                    // Redirect to CRM
-                    window.location.href = '/index.html';
+                    // Redirect to original page or CRM
+                    window.location.href = _redirect;
                 } else {
                     errorEl.textContent = data.message || 'Usuário ou senha inválidos';
                     errorEl.classList.add('show');
